fixing main page display on mobile

--- a/styles.css
+++ b/styles.css
@@ -141,13 +141,13 @@ body a {
 
   .logo {
     font-size: 10px;
-    margin-left: 0px;
+    margin-left: 5px;
     
   }
 
   .navbar input {
     height: 30px;
-    width: 200px;
+    width: 160px;
     border-radius: 40px;
     text-align: center;
     color: black;
@@ -160,7 +160,7 @@ body a {
 
   .grids{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 200px 200px;
     grid-auto-rows: auto;
     margin: 2em 1.5em;
   }
@@ -171,12 +171,12 @@ body a {
   }
 
   .cards {
-    height: 24em;
-    width: 200px;
+    height: 25em;
+    width: 195px;
   }
 
   .card-img {
-    width: 200px;
+    width: 190px;
     margin-top: 0;
   }
   
@@ -194,16 +194,20 @@ body a {
     margin-top: 15px;
   }
   
+.movie-title {
+  font-size: 15px;
+}
+
   .year-time {
     display: flex;
     flex-direction: row;
-    gap: 4.5em;
+    gap: 4.3em;
   }
 
   .rating-age {
     display: flex;
     flex-direction: row;
-    gap: 4.5em;
+    gap: 4.3em;
     margin-top: 12px;
     font-size: 15px;
   }
